--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Supabase Configuration
-VITE_SUPABASE_URL=your-supabase-project-url
+VITE_SUPABASE_URL=https://hxgfwavbboedrrzuoato.supabase.co
 VITE_SUPABASE_ANON_KEY=sb_publishable_BGJo26QLXYPYx8BBgL5xew_3OVFeuHj
